# sharpa-manus-sdk

./: .gitattributes  .gitignore  License  README.md  iread.md
client/: .gitignore  Calibration_left.mcal  Calibration_left.mcal.bak  Calibration_right.mcal.bak  ClientPlatformSpecific.cpp  Makefile  Makefile.protobuf_static  Makefile.protobuf_system  SharpaManusClient.cpp  SharpaManusClient.hpp  check_dependencies.sh  download_protobuf.sh  protobuf_problem.txt  sharpa_hand.pb.cc  sharpa_hand.pb.h  sharpa_hand.proto  sharpa_hand_pb2.py  visualizer.py
client/CalibrationGUI/: CalibrationApp.cpp  CalibrationApp.hpp  Calibration_left.mcal  Calibration_right.mcal  Makefile  PROJECT_SUMMARY.md  README.md  build.sh  download_imgui.sh  imgui.ini  main.cpp
client/calibration_backup/: Calibration_left_win.mcal  Calibration_right_linux.mcal  Calibration_right_win.mcal
client/calibration_backup/lts/: manus_calibration_left.mcal  manus_calibration_right.mcal
client/calibration_backup/王乾_0929_M1/: Calibration_left.mcal  Calibration_right.mcal
client/proto_back/: sharpa_hand.pb.h
retargeting/: VERSION.json  environment.yml  pyrightconfig.json  requirements.txt  retargeting_manus_demo_multiprocess.py  visualizer.py
retargeting/include/: VERSION.json  heartbeat_ha4.py  pub_glove_ha4.py
retargeting/include/proto_hand/: receiver_demo.py  sender_demo.py  sharpa_hand.proto  (+1 more)
retargeting_ros/: package.xml  setup.cfg  setup.py
retargeting_ros/launch/: retargeting_test.launch.py
retargeting_ros/retargeting_ros/: hand_action_bridge.py  mock_keypoints_publisher.py
(+17 files in other folders)
