<?xml version="1.0"?>
<package format="3">
  <name>retargeting_ros</name>
  <version>0.1.0</version>
  <description>ROS2 bridge for Sharpa Manus retargeting: mock keypoint publisher and HandAction to JointState bridge</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
